--- a/.github/workflows/daily-ingest.yml
+++ b/.github/workflows/daily-ingest.yml
@@ -18,6 +18,7 @@ on:
         default: '📅 Fresh Issues (last 7 days)'
         type: choice
         options:
+          - '🧹 Cleanup (remove closed/stale)'
           - '⚡ Last 2 Hours'
           - '🔥 Todays Issues (last 24 hours)'
           - '📅 Fresh Issues (last 7 days)'
@@ -132,6 +133,22 @@ jobs:
             --any-label
 
       # ============ MANUAL RUNS ============
+
+      - name: "Manual: Cleanup"
+        if: github.event_name == 'workflow_dispatch' && contains(github.event.inputs.mode, 'Cleanup')
+        working-directory: ./backend
+        env:
+          GH_APP_ID: ${{ secrets.GH_APP_ID }}
+          GH_PRIVATE_KEY: ${{ secrets.GH_PRIVATE_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
+          PINECONE_INDEX_NAME: ${{ secrets.PINECONE_INDEX_NAME }}
+        run: |
+          echo "🧹 Cleaning up closed issues (last 24h) + stale issues (>20 days)..."
+          python -m scripts.cleanup_pinecone \
+            --closed-hours 24 \
+            --stale-days 20
 
       - name: "Manual: Last 2 Hours"
         if: github.event_name == 'workflow_dispatch' && contains(github.event.inputs.mode, 'Last 2 Hours')
