--- a/ai-engine/Dockerfile
+++ b/ai-engine/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy from project root context with -f backend/Dockerfile
-COPY backend/requirements.txt .
+# Copy from project root context with -f ai-engine/Dockerfile
+COPY ai-engine/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY backend/ .
+COPY ai-engine/ .
 
 EXPOSE 8000
 
