--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
 version: '3.8'
 
 services:
-  backend:
+  ai-engine:
     build:
-      context: ./backend
+      context: ./ai-engine
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
     env_file:
-      - ./backend/.env
+      - ./ai-engine/.env
     volumes:
-      - ./backend:/app
+      - ./ai-engine:/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
-  frontend:
+  web-platform:
     build:
-      context: ./frontend
+      context: ./web-platform
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:8000
     volumes:
-      - ./frontend:/app
+      - ./web-platform:/app
       - /app/node_modules
     depends_on:
-      - backend
+      - ai-engine
