--- a/web-platform/.gitignore
+++ b/web-platform/.gitignore
@@ -36,6 +36,10 @@ yarn-error.log*
 # vercel
 .vercel
 
+# next-sitemap generated files
+/public/sitemap*.xml
+/public/robots.txt
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
