--- a/ai-engine/Dockerfile
+++ b/ai-engine/Dockerfile
@@ -6,8 +6,11 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends gcc libpq-dev && \
+    apt-get install -y --no-install-recommends gcc libpq-dev git && \
     rm -rf /var/lib/apt/lists/*
+
+ARG GITHUB_TOKEN
+ENV GITHUB_TOKEN=$GITHUB_TOKEN
 
 COPY ai-engine/requirements.txt .
 RUN pip install --user --no-cache-dir -r requirements.txt
