--- a/ai-engine/requirements.txt
+++ b/ai-engine/requirements.txt
@@ -14,3 +14,7 @@ sqlalchemy>=2.0.0
 asyncpg>=0.29.0
 psycopg2-binary>=2.9.0
 requests>=2.28.0
+
+# Private Brain (Ranking Logic)
+# Uses ${GITHUB_TOKEN} environment variable injected by Cloud Build
+git+https://github.com/dhruv0206/devproof-ranking-algo.git
