--- a/.github/workflows/daily-ingest.yml
+++ b/.github/workflows/daily-ingest.yml
@@ -1,15 +1,13 @@
 name: Data Ingestion (GraphQL)
 
 on:
-  # ALL SCHEDULED INGESTION PAUSED TO REDUCE PINECONE WU COSTS
-  # Uncomment to re-enable scheduled runs
-  # schedule:
-  #   # Nightly at 2 AM UTC: Cleanup (remove closed + stale issues)
-  #   - cron: '0 2 * * *'
-  #   # Every 4 hours: fetch last 4.5 hours of issues
-  #   - cron: '0 */4 * * *'
-  #   # Every 2 hours: fetch last 2.5 hours of issues
-  #   # - cron: '0 */2 * * *'  # DISABLED - using 4h cycle instead
+  schedule:
+    # Nightly at 2 AM UTC: Cleanup (remove closed + stale issues)
+    - cron: '0 2 * * *'
+    # Every 4 hours: fetch last 4.5 hours of issues
+    # - cron: '0 */4 * * *'
+    # Every 2 hours: fetch last 2.5 hours of issues
+    - cron: '0 */2 * * *'
   #   # Nightly at 4 AM UTC: Fresh (7d) + Popular (5000+ stars)
   #   # - cron: '0 4 * * *'  # DISABLED - manual only
   #   # Nightly at 6 AM UTC: Today's issues (24h)
@@ -107,10 +105,10 @@ jobs:
             --recent-hours 24 \
             --any-label
 
-      # 3. Daily Cycles (Every 4h): Newest + Recently Discussed
-      # Runs at 00, 04, 08, 12, 16, 20
-      - name: "Scheduled: Newest + Active Issues (4.5h)"
-        if: github.event_name == 'schedule' && github.event.schedule == '0 */4 * * *'
+      # 3. Daily Cycles (Every 2h): Newest + Recently Discussed
+      # Runs at 00, 02, 04, 06, 08, 10, 12, 14, 16, 18, 20, 22
+      - name: "Scheduled: Newest + Active Issues (2.5h)"
+        if: github.event_name == 'schedule' && github.event.schedule == '0 */2 * * *'
         working-directory: ./ai-engine
         env:
           GH_APP_ID: ${{ secrets.GH_APP_ID }}
@@ -120,18 +118,18 @@ jobs:
           PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
           PINECONE_INDEX_NAME: ${{ secrets.PINECONE_INDEX_NAME }}
         run: |
-          echo "🆕 Fetching NEWLY CREATED issues (last 4.5 hours)..."
+          echo "🆕 Fetching NEWLY CREATED issues (last 2.5 hours)..."
           python -m scripts.ingest_graphql \
             --min-stars 0 \
             --max-issues 100 \
-            --created-hours 4.5 \
+            --created-hours 2.5 \
             --any-label
           
-          echo "🔥 Fetching RECENTLY DISCUSSED issues (last 4.5 hours)..."
+          echo "🔥 Fetching RECENTLY DISCUSSED issues (last 2.5 hours)..."
           python -m scripts.ingest_graphql \
             --min-stars 0 \
             --max-issues 200 \
-            --recent-hours 4.5 \
+            --recent-hours 2.5 \
             --any-label
 
       # ============ MANUAL RUNS ============
