--- a/.github/workflows/daily-ingest.yml
+++ b/.github/workflows/daily-ingest.yml
@@ -40,6 +40,9 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
 
+      - name: Authenticate with GitHub
+        run: git config --global url."https://${{ secrets.GH_PAT }}@github.com/".insteadOf "https://github.com/"
+
       - name: Install dependencies
         working-directory: ./ai-engine
         run: pip install -r requirements.txt
